tests/sksl/errors/DoTypeMismatch.sksl
void main() {
    do {} while (float2(1));
}
